Update NHL .ipynb

--- a/NHL .ipynb
+++ b/NHL .ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MATH 210 - Player Leaderboards in the NHL - Matthew Yuen"
+    "# Player Leaderboards in the NHL - Matthew Yuen"
    ]
   },
   {
